#39: Refactored the exasol metric class structure